[tool.poetry]
name = "aoc2024"
version = "0.1.0"
description = ""
authors = ["Tomáš Valenta <tomas.valenta@statsperform.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.1.3"
advent-of-code-data = "^2.0.4"
click = "^8.1.7"
pyperclip = "^1.9.0"
tqdm = "^4.67.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
